content/static: prevent page breaks inside code blocks when printing
Fixes golang/go#33933

Reviewed-on: https://go-review.googlesource.com/c/website/+/192418

--- a/content/static/style.css
+++ b/content/static/style.css
@@ -1011,5 +1011,6 @@ a.error {
     background: #fff;
     border: 0.0625rem solid #bbb;
     white-space: pre-wrap;
+    page-break-inside: avoid;
   }
 }
